--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.8.0",
     "@phosphor-icons/react": "^2.1.10",
     "formidable": "^3.5.4",
     "langchain": "^0.1.0",
