--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "19.1.8",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0"
   }
